--- a/notebooks/10x-180831-analysis.Rmd
+++ b/notebooks/10x-180831-analysis.Rmd
@@ -12,9 +12,9 @@ output:
 library(Seurat)
 library(dplyr)
 
-seurobj <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180831')
-aligned <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180831-aligned')
-aligned_T1_old <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180504-T1-aligned')
+seurobj <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180831-noreg')
+#aligned <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180831-aligned')
+#aligned_T1_old <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180504-T1-aligned')
 ```
 
 #Quality control plots
@@ -31,7 +31,7 @@ GenePlot(seurobj, 'nUMI', 'nGene', cex.use = 0.5)
 
 
 ```{r}
-PCElbowPlot(seurobj, num.pc=50) #The elbow is at 6 pcs. Run tSNE on both 6, 18 and 30 PC's. 
+PCElbowPlot(seurobj, num.pc=50) #TSNE+clustering run on 20 PC's.
 ```
 
 #Data visualization
@@ -40,12 +40,6 @@ Interesting to see: T4 and T5 contain a lot more variation than T1, T2 and T3, a
 
 ```{r}
 PCAPlot(seurobj, group.by='timepoint', pt.size=0.1)
-```
-
-If EBF2 marks brown then not. 
-
-```{r}
-FeaturePlot(seurobj, reduction.use='pca', features.plot=c('EBF2'), pt.size=1, cols.use=c('gray', 'blue'), no.legend=F)
 ```
 
 A few clusters in the data have much higher expression of 'ADIPOQ', 'SCD', 'RBP4', 'G0S2', 'PLIN4', 'FABP5'. This is captured by PC2. 
@@ -60,203 +54,69 @@ FeaturePlot(seurobj, reduction.use='pca', features.plot=c('ADIPOQ', 'SCD', 'RBP4
 FeaturePlot(seurobj, reduction.use='pca', features.plot=c('PLA2G2A', 'MT1X', 'APOD', 'DPT', 'PTGDS', 'IGF2'), pt.size=1, cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
 ```
 
+PLA2G2A: http://www.jlr.org/content/early/2017/06/29/jlr.M076141 
+"...suggesting that PLA2G2A activates mitochondrial uncoupling in brown adipose tissue."
 
-TSNE on 6 PC's. 
 
-```{r}
-DimPlot(seurobj, reduction.use='tsne6', group.by='timepoint', pt.size=0.1)
+PDGFRα/PDGFRβ signaling balance modulates progenitor cell differentiation into white and beige adipocytes. Based on PDGFRα or PDGFRβ deletion and ectopic expression experiments, we conclude that the PDGFRα/PDGFRβ signaling balance determines progenitor commitment to beige (PDGFRα) or white (PDGFRβ) adipogenesis. Our study suggests that adipocyte lineage specification and metabolism can be modulated through PDGFR signaling. http://dev.biologists.org/content/145/1/dev155861.long 
+
+```{r fig19, fig.height = 3, fig.width = 10, fig.align = "center"}
+FeaturePlot(seurobj, reduction.use='pca', features.plot=c('PDGFRA', 'PDGFRB'), pt.size=1, cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
 ```
 
-The first 6 PCs explain most of the variation (as we could see in the elbow plot above), but they don't capture the more subtle differences. For example, when only using 6 PC's the mixture cluster cannot be found:
+
+TSNE
 
 ```{r}
-DimPlot(seurobj, reduction.use='tsne6', pt.size=0.1, cells.highlight=seurobj@cell.names[seurobj@meta.data$res.0.5 == 11], cols.use='grey', cols.highlight='blue')
-```
-
-TSNE on 18 PC's. 
-
-```{r}
-DimPlot(seurobj, reduction.use='tsne18', group.by='timepoint', pt.size=0.1)
+TSNEPlot(seurobj, group.by='timepoint', pt.size=0.1)
 ```
 
 ```{r}
-DimPlot(seurobj, reduction.use='tsne18', group.by='Phase', pt.size=0.1)
+TSNEPlot(seurobj, group.by='Phase', pt.size=0.1)
 ```
 
 Cluster 11 = mixture cluster.
 
 ```{r}
-DimPlot(seurobj, reduction.use='tsne18', group.by='res.0.5', pt.size=0.1)
+TSNEPlot(seurobj, group.by='res.0.5', pt.size=0.1, do.label=T)
+```
+
+```{r fig2, fig.height = 3, fig.width = 10, fig.align = "center"}
+VlnPlot(seurobj, group.by='res.0.5', features.plot=c('MALAT1', 'NEAT1'), point.size.use=-1)
 ```
 
 #Metadata feature plots
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'nUMI', cols.use=c('grey', 'blue'), no.legend=F)
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'nUMI', cols.use=c('grey', 'blue'), no.legend=F)
 ```
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'percent.mito', cols.use=c('grey', 'blue'), no.legend = F)
+FeaturePlot(seurobj, features.plot = 'percent.mito', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'nGene', cols.use=c('grey', 'blue'), no.legend = F)
-```
-
-#Alignment
-
-Shared correlation per CC.
-
-```{r}
-#Make again
-#load('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/MetageneBicorPlots')
-#ccplot_aligned
-```
-
-12 CC's were used for tSNE.
-
-```{r}
-TSNEPlot(aligned, group.by='timepoint', pt.size=0.1)
-```
-
-
-#Aligning T1 with old data
-
-Shared correlation per CC. 
-
-```{r}
-#ccplot_aligned_T1_old  make new plot
-```
-
-15 CC's were used for tSNE. 
-
-```{r}
-#replacing res.0.5 column of T1 with 'T1'
-aligned_T1_old@meta.data[aligned_T1_old@meta.data$sample_name == 'T1', 'res.0.5'] = 'T1'
-
-TSNEPlot(aligned_T1_old, group.by='sample_name', pt.size=0.1)
-```
-
-```{r}
-TSNEPlot(aligned_T1_old, group.by='res.0.5', pt.size=0.1)
-```
-
-Highligted mixture cluster
-
-```{r}
-DimPlot(aligned_T1_old, reduction.use='tsne', cells.highlight=aligned_T1_old@cell.names[which(aligned_T1_old@meta.data$res.0.5 %in% 12)], pt.size.use=0.1, cols.highlight = 'blue', cols.use='grey')
-```
-
-Highlighted T1 cells. It does not look like T1 cells are in the mixture cluster on the right. Could it be the big cluster in T1 with low UMI and gene counts affects the sample alignment and that's the reason we are not seeing cells of T1 in the mixture cluster? Or because T1 consists of four samples? There are also some cells from the mixture cluster scattered accross the whole dataset, so maybe the mixture cells from T1 are there but also scattered accross the data. 
-
-```{r}
-DimPlot(aligned_T1_old, reduction.use='tsne', cells.highlight=aligned_T1_old@cell.names[which(aligned_T1_old@meta.data$res.0.5 %in% 'T1')], pt.size.use=0.1, cols.use = 'grey', cols.highlight = 'blue')
-```
-
-We can also look at some of the marker genes for the mixture cluster.
-
-```{r}
-T1 <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/10x-180831-T1')
-```
-
-Positive markers. (the clustering was performed on the whole dataset).
-
-Clusters 1, 2, 3, 4, 7, 11 belong to T1-T3.
-Clusters 5, 6, 8, 9, 10 belong to T4-T5. 
-
-```{r fig2, fig.height = 15, fig.width = 10, fig.align = "center"}
-VlnPlot(seurobj, group.by='res.0.5', nCol=2, features.plot=c('ACTB', 'TPM2', 'ANXA2', 'LDHA', 'PRDX1', 'MYL12B', 'MYL12A', 'CCND1', 'RAB13', 'MAP1B'), point.size.use=-1)
-```
-
-Negative markers. MALAT1 and NEAT1 seem to be the best markers. 
-
-```{r fig3, fig.height = 12, fig.width = 10, fig.align = "center"}
-VlnPlot(seurobj, group.by='res.0.5', nCol=2, features.plot=c('MALAT1', 'COL1A1', 'NEAT1', 'FN1', 'COL1A2', 'HIST1H4C', 'CYR61', 'COL3A1'), point.size.use=-1)
-```
-
-It looks like cluster 11 marks the mixture cluster. The clustering here was performed on the whole dataset. Let's see where cluster 11 is:
-
-```{r}
-TSNEPlot(seurobj, group.by='res.0.5', pt.size=0.1)
-```
-
-Does cluster 11 also contain cells from other timepoints? 
-
-```{r}
-table(seurobj@meta.data$timepoint[seurobj@meta.data$res.0.5 == 11])
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'nGene', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
 #Markergene expression
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'EBF2', cols.use=c('grey', 'blue'), no.legend = F)
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'EBF2', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'TM4SF1', cols.use=c('grey', 'blue'), no.legend = F)
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'TM4SF1', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'LY6K', cols.use=c('grey', 'blue'), no.legend = F)
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'LY6K', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
 ```{r}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot = 'PDGFRA', cols.use=c('grey', 'blue'), no.legend = F)
+FeaturePlot(seurobj, reduction.use='tsne', features.plot = 'PDGFRA', cols.use=c('grey', 'blue'), no.legend = F)
 ```
 
-
-#DE between T1-T2-T3 and T4-T5
-
-
-
-```{r}
-markers.time <- read.table('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/markergenes/180831/markers_time-combined_negbinom', sep='\t', header=T)
-markers.time.1 <- markers.time[markers.time$cluster == 'T1-T2-T3', ]
-```
-
-Positive marker genes T1-T2-T3 
-
-```{r}
-as.data.frame(markers.time.1[order(-markers.time.1$avg_logFC),])
-```
-
-Negative markers T1-T2-T3 or positive markers T4-T5
-
-```{r}
-as.data.frame(markers.time.1[order(markers.time.1$avg_logFC),])
-```
-
-Interesting: FN1 was a negative marker gene for the mixture cluster. 
-
-Positive marker genes T1-T2-T3:
-
-```{r fig10, fig.height = 15, fig.width = 10, fig.align = "center"}
-FeaturePlot(seurobj, reduction.use='tsne18',  features.plot=as.vector(markers.time.1[order(-markers.time.1$avg_logFC),'gene'][1:10]), cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
-```
-
-```{r fig4, fig.height = 15, fig.width = 10, fig.align = "center"}
-VlnPlot(seurobj, features.plot=as.vector(markers.time.1[order(-markers.time.1$avg_logFC),'gene'][1:10]), group.by='timepoint', nCol=2, point.size.use = -1)
-```
-
-Positive marker genes T4-T5
-
-```{r fig5, fig.height = 15, fig.width = 10, fig.align = "center"}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot=as.vector(markers.time.1[order(markers.time.1$avg_logFC),'gene'][1:10]), cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
-```
-
-```{r fig6, fig.height = 15, fig.width = 10, fig.align = "center"}
-VlnPlot(seurobj, features.plot=as.vector(markers.time.1[order(markers.time.1$avg_logFC),'gene'][1:10]), group.by='timepoint', nCol=2, point.size.use = -1)
-```
-
-FAB4: FABP4 is a known mature adipocyte marker. FABP4 encodes the fatty acid binding protein found in adipocytes. Fatty acid binding proteins are a family of small, highly conserved, cytoplasmic proteins that bind long-chain fatty acids and other hydrophobic ligands. It is thought that FABPs roles include fatty acid uptake, transport, and metabolism. [provided by RefSeq, Jul 2008] \\
-
-CFD: This gene encodes a member of the S1, or chymotrypsin, family of serine peptidases. This protease catalyzes the cleavage of factor B, the rate-limiting step of the alternative pathway of complement activation. This protein also functions as an adipokine, a cell signaling protein secreted by adipocytes, which regulates insulin secretion in mice. \\
-
-APOE: The protein encoded by this gene is a major apoprotein of the chylomicron. It binds to a specific liver and peripheral cell receptor, and is essential for the normal catabolism of triglyceride-rich lipoprotein constituents. This gene maps to chromosome 19 in a cluster with the related apolipoprotein C1 and C2 genes. Mutations in this gene result in familial dysbetalipoproteinemia, or type III hyperlipoproteinemia (HLP III), in which increased plasma cholesterol and triglycerides are the consequence of impaired clearance of chylomicron and VLDL remnants. [provided by RefSeq, Jun 2016] \\
-
-G0S2: G0S2 (G0/G1 Switch 2) is a Protein Coding gene. Among its related pathways are Metabolism and Regulation of lipid metabolism by Peroxisome proliferator-activated receptor alpha (PPARalpha). \\
-
-SCD: This gene encodes an enzyme involved in fatty acid biosynthesis, primarily the synthesis of oleic acid. The protein belongs to the fatty acid desaturase family and is an integral membrane protein located in the endoplasmic reticulum. Transcripts of approximately 3.9 and 5.2 kb, differing only by alternative polyadenlyation signals, have been detected. A gene encoding a similar enzyme is located on chromosome 4 and a pseudogene of this gene is located on chromosome 17. [provided by RefSeq, Sep 2015]
 
 #Markers literature
 
@@ -266,97 +126,21 @@ Marker genes for mature brown/beige compared to white mentioned by Seale 2016: U
 VlnPlot(seurobj, features.plot=c('UCP1', 'DIO2', 'CIDEA', 'PPARGC1A', 'PPARA', 'COX7A1', 'PRDM16', 'EBF2'), group.by='timepoint', point.size.use = -1, nCol=2)
 ```
 
-COX7A1 seems like the only interesting gene. Let's see if it's higher expressed in certain clusters.
 
-```{r fig8, fig.height = 4, fig.width = 10, fig.align = "center"}
-VlnPlot(seurobj, features.plot='COX7A1', group.by='res.1.5', point.size.use = -1)
+Based on PDGFRα or PDGFRβ deletion and ectopic expression experiments, we conclude that the PDGFRα/PDGFRβ signaling balance determines progenitor commitment to beige (PDGFRα) or white (PDGFRβ) adipogenesis. Our study suggests that adipocyte lineage specification and metabolism can be modulated through PDGFR signaling. http://dev.biologists.org/content/145/1/dev155861.long 
+
+```{r fig20, fig.height = 3, fig.width = 10, fig.align = "center"}
+FeaturePlot(seurobj, reduction.use='pca', features.plot=c('PDGFRA', 'PDGFRB'), pt.size=1, cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
 ```
 
-It does seem to be higher expressed in cluster 16 (T5).
-
-```{r}
-DimPlot(seurobj, reduction.use='tsne18', group.by='res.1.5', pt.size=0.1, do.label=T)
-```
-
-```{r}
-FeaturePlot(seurobj, cols.use=c('gray', 'blue'), no.legend=F, features.plot=toupper('Cox7a1'), reduction.use='tsne18')
-```
-
-#Markers from DE tests
-
-Negbinom test between clusters res.1.5.
-
-```{r}
-markers_res1.5 <- read.table('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/markergenes/180831/markers_res.1.5_negbinom', header=T)
-```
-
-The top 10 markers per cluster
-
-```{r}
-#markers_res1.5 %>% arrange(cluster, desc(avg_logFC)) %>% top_n(10, cluster)
-top10 <- markers_res1.5 %>% arrange(desc(avg_logFC)) %>% group_by(cluster) %>% top_n(10, avg_logFC) %>% arrange(cluster)
-top10
+```{r fig21, fig.height = 3, fig.width = 10, fig.align = "center"}
+FeaturePlot(seurobj, reduction.use='tsne', features.plot=c('PDGFRA', 'PDGFRB'), pt.size=1, cols.use=c('gray', 'blue'), no.legend=F, nCol=2)
 ```
 
 ```{r}
-DimPlot(seurobj, reduction.use='tsne18', group.by='res.1.5', pt.size=0.1, do.label=T)
+GenePlot(SetAllIdent(seurobj, id='timepoint'), gene1='PDGFRA', gene2='PDGFRB', cex.use=0.5)
 ```
 
-Sorted on avg_logFC
-
-```{r}
-top10_orderedLogFC <- top10[order(-top10$avg_logFC),]
-top10_orderedLogFC
-```
-
-Genes with the highest avg_logFC. 
-
-```{r fig12, fig.height=45, fig.width=15, fig.align="center"}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot=as.vector(unique(top10_orderedLogFC$gene[1:20])), cols.use=c('gray', 'blue'), no.legend=F, nCol = 2)
-```
-
-
-
-```{r fig13, fig.height=30, fig.width=15, fig.align="center"}
-FeaturePlot(seurobj, reduction.use='tsne18', features.plot=c('PLA2G2A', 'SAA1', 'MT1X', 'APOD', 'DPT', 'CST3', 'PTGDS', 'IGF2', 'THBS1', 'TM4SF1'), cols.use=c('gray', 'blue'), no.legend=F, nCol = 2)
-```
-
-Heatmap of the top 10 marker genes per cluster
-
-```{r}
-DoHeatmap(SetAllIdent(seurobj, id='res.1.5'), genes.use=top10$gene, remove.key=T, slim.col.label = T)
-```
-
-```{r}
-DimPlot(seurobj, group.by='res.1.5', reduction.use='tsne18', pt.size=0.1, do.label=T)
-```
-
-
-#DE mixture cluster
-
-```{r}
-markers.mixture <- read.table('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/markergenes/180831/markers_res.0.7_negbinom', sep='\t', header=T)
-markers.mixture <- markers.mixture[markers.mixture$avg_logFC < 0.05,]
-markers.mixture <- markers.mixture[markers.mixture$cluster == 13,]
-```
-
-Positive markers mixture cluster.
-
-```{r}
-as.data.frame(markers.mixture[order(-markers.mixture$avg_logFC),])
-```
-
-Negative markers mixture cluster
-
-```{r}
-as.data.frame(markers.mixture[order(markers.mixture$avg_logFC),])
-```
-
-MALAT1 and NEAT1 again in the top. A lot of the negative markers for the mixture cluster are positive markers for T4-T5 (see above). Probably because the mixture cluster mainly contains cells from T1, T2 and T3 and only a few from T4 and T5. Looking at the expression of those genes in the mixture cluster grouped by timepoint, we can see that they go up as well (CFD, MT1X, APOE, G0S2), so they are found as markers for the mixture cluster because we only have a few T4-T5 cells in our mixture cluster.  
-
-```{r fig11, fig.height = 5, fig.width = 10, fig.align = "center"}
-VlnPlot(SetAllIdent(seurobj, id='res.0.5'), ident.include=11,  features.plot=as.vector(markers.mixture[order(markers.mixture$avg_logFC),'gene'][1:10]), group.by='timepoint', point.size.use=0.5, nCol=5)
-```
 
 #Stressed cells?
 
@@ -370,7 +154,7 @@ de_genes <- read.table('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/ma
 de_genes <- de_genes[de_genes$p_val_adj < 0.05,]
 ```
 
-Cluster 13 is the mixture cluster. Check MALAT1 and NEAT1 to be sure: 
+Cluster 14 is the mixture cluster. Check MALAT1 and NEAT1 to be sure: 
 
 ```{r fig14, fig.height = 3, fig.width = 10, fig.align = "center"}
 VlnPlot(seurobj, group.by='res.0.7', features.plot=c('MALAT1', 'NEAT1'), point.size.use =-1)
@@ -410,7 +194,7 @@ data.frame(
   n_neg=unlist(n_neg),
   perc_pos=unlist(perc_pos),
   perc_neg=unlist(perc_neg)
-  )
+)
 
 ```
 
@@ -430,5 +214,61 @@ VlnPlot(seurobj, features.plot=intersect(toupper(stress_genes), mixture_genes_po
 
 ```{r fig16, fig.height = 3, fig.width = 5, fig.align = "center"}
 VlnPlot(seurobj, features.plot='TXN', point.size.use=-1, group.by='res.0.7', nCol=2)
+```
+
+#Gene correlations
+
+```{r}
+matrix <- as.matrix(seurobj@data)
+get_gene_correlations <- function(gene){
+  gene <- as.numeric(matrix[gene,])
+  correlations <- apply(matrix,1,function(x){cor(gene,x)})
+  correlations <- as.data.frame(correlations[order(-correlations)])
+  correlations['gene'] <- rownames(correlations)
+  rownames(correlations) <- NULL
+  names(correlations) <- c('cor', 'gene')
+  return(correlations[order(-correlations$cor),])
+}
+```
+
+PDGFRA. Positive correlations. (better to check per timepoint what the correlations are...)
+
+```{r}
+
+pdgfra_correlations <- get_gene_correlations('PDGFRA')
+pdgfra_correlations
+```
+
+PDGFRA negative correlations. 
+
+```{r}
+pdgfra_correlations[order(pdgfra_correlations$cor),]
+```
+
+Interesting: FABP5 as top negative correlated gene. Some of the other known adipogenic genes are also in the top (CIDEC, PLIN). Seale et al. describe PDGFRA as a general marker for preadipocytes and ADIPOQ (also top neg gene) as general marker for mature adipocytes. Then it makes sense that it is negatively correlated with the mature adipocyte genes. 
+\
+Another study (2018) says: \
+Based on PDGFRα or PDGFRβ deletion and ectopic expression experiments, we conclude that the PDGFRα/PDGFRβ signaling balance determines progenitor commitment to beige (PDGFRα) or white (PDGFRβ) adipogenesis. Our study suggests that adipocyte lineage specification and metabolism can be modulated through PDGFR signaling. http://dev.biologists.org/content/145/1/dev155861.long 
+\
+And:\
+In perigonadal (visceral) fat of male mice, beige adipocytes develop from a population of precursors that also differentiate into white adipocytes. These bipotent precursors express platelet-derived growth factor receptor-a. When the precursors proliferate, they lose PDGFRa expression and differentiate into UCP1+ adipocytes. Conversely, a high-fat diet stimulates the differentiation of PDGFRa+ cells into white adipocytes. This result is consistent with the finding that most or all white adipocytes descend from PDGFRa-expressing cells. Cell culture analyses have shown that PDGFRa-expressing cells can give rise to both UCP1- and UCP1+ (beige) adipocytes. 1 (do brown cells also express PDGFRa?)
+\
+Does that mean that PDGFRA is a general preadipocyte marker. If preadipocytes start to express PDGFRB they will develop into white and PDGFRA exprssion drops. Otherwise they will develop into beige and PDGFRA expression will also drop. So PDGFRA just serves to commit preadipocytes to beige and then it will drop? This seems to be in line with what we see in our data: 
+
+```{r fig22, fig.height = 3, fig.width = 10, fig.align = "center"}
+VlnPlot(seurobj, group.by='timepoint', features.plot=c('PDGFRA', 'PDGFRB'), point.size.use=-1, x.lab.rot=T)
+```
+
+EBF2 positive correlations.
+
+```{r}
+ebf2 <- get_gene_correlations('EBF2')
+ebf2
+```
+
+Ebf2 negative correlations
+
+```{r}
+ebf2[order(ebf2$cor),]
 ```
 
