--- a/notebooks/demuxlet.Rmd
+++ b/notebooks/demuxlet.Rmd
@@ -1,84 +1,69 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 
-How much singlets per sample and per donor? How much doublets?
+
 
 ```{r}
+library(Seurat)
+```
 
-#function: read in file, filter filer file by barcodes. Print nr of singlets, nr of doublets, nr of ambiguous, nr of 
-print_demuxlet_info <- function(folder_name, sample){
-  demuxlet <- read.table(paste('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/demuxlet/demuxlet_out/', folder_name, '/180831_10x_', sample, '_demuxlet.best', sep=''), header=T, sep='\t')
-  barcodes <- read.table(paste('/data/sc-10x/data-runs/171120-scheele-adipose/180831_10x_', sample,  '/outs/filtered_gene_bc_matrices/hg19/barcodes.tsv', sep=''))
-  demuxlet_filtered <- demuxlet[which(demuxlet$BARCODE %in% barcodes$V1),]
+```{r}
+data <- readRDS('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/10x-adipocyte-analysis/output/10x-180831')
+```
+
+```{r}
+getDemuxletForSample <- function(i, outputdir){
+  demuxlet <- read.table(paste('/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/demuxlet/demuxlet_out/', outputdir, '/180831_10x_s', i, '.best', sep=''), header=T)
+
+  demuxlet$correct_barcode <- paste(unlist(sapply(strsplit(as.character(demuxlet$BARCODE), '-'), '[[', 1)), '-', i, sep='')
+  rownames(demuxlet) <- demuxlet$correct_barcode
+  cells <- rownames(data@meta.data)[data@meta.data$timepoint == paste('T', i, sep='')]
+  demuxlet_filtered <- demuxlet[demuxlet$correct_barcode %in% cells, ]
   
-  singlets <- as.vector(demuxlet_filtered$BEST[unlist(lapply(as.vector(demuxlet_filtered$BEST),function(x){return(startsWith(x, 'SNG'))}))])
-  doublets <- as.vector(demuxlet_filtered$BEST[unlist(lapply(as.vector(demuxlet_filtered$BEST),function(x){return(startsWith(x, 'DBL'))}))])
-  ambiguous <- as.vector(demuxlet_filtered$BEST[unlist(lapply(as.vector(demuxlet_filtered$BEST),function(x){return(startsWith(x, 'AMB'))}))])
-  
-  print(paste('Nr. of singlets: ', length(singlets), sep=''))
-  print(paste('Nr. of doublets: ', length(doublets), sep=''))
-  print(paste('Nr. of ambiguous: ', length(ambiguous), sep=''))
-  print(paste('Avg N.SNP: ', mean(demuxlet_filtered$N.SNP), sep=''))
-  
+  num_sng_dbl <- sapply(strsplit(as.character(demuxlet_filtered$BEST), '-'), '[[', 1)
+
+  print(paste('SAMPLE', i))
+  print(table(num_sng_dbl))
+  return(demuxlet_filtered)
 }
-```
 
-```{r}
-list.dirs(path = "/projects/pytrik/sc_adipose/analyze_10x_fluidigm/data/demuxlet/demuxlet_out/", full.names=F)
-```
+getAllDemuxletResults <- function(outdir){
+  demuxlet_list <- list()
+  for (i in 1:5){
+    demuxlet <- getDemuxletForSample(i, outdir)
+    demuxlet_list[[i]] <- demuxlet
+  }
+  demuxlet_all <- do.call(rbind, unname(demuxlet_list))
+  demuxlet_all$label <- as.character(demuxlet_all$BEST)
+  demuxlet_all$label[startsWith(demuxlet_all$label, 'DBL')] <- 'NA'
+  demuxlet_all$label[startsWith(demuxlet_all$label, 'AMB')] <- 'NA'
 
+  data <- AddMetaData(data, demuxlet_all['label'], col.name='label')
 
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_ger0.01', 's1')
-```
+  print(dim(demuxlet_all))
+  
+  plot_grid(
+    DimPlot(data, cells.highlight = rownames(data@meta.data)[grep('44B', data@meta.data$label)], reduction.use='tsne', cols.use='gray', cols.highlight = 'blue'),
+    DimPlot(data, cells.highlight = rownames(data@meta.data)[grep('BAT14', data@meta.data$label)], reduction.use='tsne', cols.use='gray', cols.highlight = 'blue'),
+    DimPlot(data, cells.highlight = rownames(data@meta.data)[grep('1AF', data@meta.data$label)], reduction.use='tsne', cols.use='gray', cols.highlight = 'blue'),
+    DimPlot(data, cells.highlight = rownames(data@meta.data)[grep('13a', data@meta.data$label)], reduction.use='tsne', cols.use='gray', cols.highlight = 'blue'),
+    labels=c('44B', 'BAT14', '1AF', '13a')
+  )
+}
 
-
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_ger0.001', 's1')
-```
-
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_ger0.05', 's1')
-```
-
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_correct-refalleles_ger0.01', 's1')
-```
-
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_correct-refalleles_ger0.05', 's1')
-```
-
-```{r}
-print_demuxlet_info('plink_bed-updated_vcf_sorted_header_correct-refalleles_ger0.001', 's1')
 ```
 
 
 ```{r}
-print_demuxlet_info('chr1_22_combined.qc_r2_maf.vcf.recode_sorted_header', 's1')
-```
-
-
-```{r}
-#print_demuxlet_info('demuxlet_out_ger0.001', 's1')
+getAllDemuxletResults('demuxlet_vcf_plink_bed-updated_sorted')
 ```
 
 ```{r}
-print_demuxlet_info('demuxlet_out_ger0.05', 's1')
+getAllDemuxletResults('demuxlet_vcf-imputed-genotypes')
 ```
 
-
-```{r}
-print_demuxlet_info('chr1_22_combined.qc_r2_maf.vcf.recode_sorted_header', 's1')
-```
-
-```{r}
-print_demuxlet_info('vcf_tutorial_gt', 's1')
-```
-
-```{r}
-print_demuxlet_info('plink_bed-updated_sorted_header', 's1')
-```
 
